--- a/React/packages.config
+++ b/React/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net452" />
+  <package id="bootstrap" version="3.1.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="JavaScriptEngineSwitcher.Core" version="1.5.0" targetFramework="net452" />
   <package id="JavaScriptEngineSwitcher.Msie" version="1.5.0" targetFramework="net452" />
@@ -46,6 +46,7 @@
   <package id="React.Web.Mvc4" version="2.4.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
   <package id="showdown" version="0.9" targetFramework="net452" />
+  <package id="Twitter.Bootstrap.MVC" version="2.1.6" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
